...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionalFeaturesActivity">

    <!--Card View for pressing to activate the ghost mode-->
    <android.support.v7.widget.CardView
        android:id="@+id/cardGhost"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
...
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <!--Card View for pressing to activate the time trial mode-->
    <android.support.v7.widget.CardView
        android:id="@+id/cardTimeTrial"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
...
