<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >


    <!--Constraint that holds the game's display (not the navigation drawer)-->
    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:mapbox="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mapActivity">

        <!--The map-->
        <com.mapbox.mapboxsdk.maps.MapView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mapboxMapView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            mapbox:mapbox_cameraTargetLat="55.944"
            mapbox:mapbox_cameraTargetLng="-3.188396"
            mapbox:mapbox_cameraZoom="15"
            mapbox:mapbox_styleUrl="@string/mapbox_style_mapbox_streets">

        </com.mapbox.mapboxsdk.maps.MapView>

        <!--Text View displaying how many coins the player has collected today-->
        <TextView
            android:id="@+id/totalCoins"
            android:layout_width="85dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:background="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <!--Text View that displays the different timers when the bonus modes are active-->
        <TextView
            android:id="@+id/ghostTimeTrialTime"
            android:layout_width="85dp"
            android:layout_height="42dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="4dp"
            android:background="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <!--
        Toolbar so the user can press it and open up the navigation drawer.
        While the user can swipe from the left of the screen to open up the
        nav drawer, this toolbar helps guide the user to know to do this
        and also provides another way of opening the nav drawer
        -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.support.v7.widget.Toolbar>


    </android.support.constraint.ConstraintLayout>

    <!--Navigation drawer that slides out in front of the map-->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>