...
    tools:context=".MainActivity"
    android:background="@drawable/subu"
    tools:showIn="@layout/activity_main">

    <!--Button to go to the login screen-->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
...
